-----------------

- BUG-368: Fix campus framebuilder inline svg

- ZON-2489: Add Infobox to ZEIT Campus

- ZON-2914: Output site_name and admin tag regardless of shared cardstack

- ZON-2728: Assign `rel` attribute to article tags

- ZON-2496: Introduce ZEIT Campus centerpage with teasers

- ZON-2838: Add ZCO topicpage links

- ZON-2837: Add table of contents to ZEIT Campus articles

- FIX: Fix main navigation on author pages

- FIX: Fix gallery buttons on mobile

- MAINT: Use image variants for author images and Spektrum feed

- MAINT: Update ZEIT Campus navigation


2.63 (2016-03-08)
-----------------

- FIX: Polish article citation blocks for campus

- ZON-2391: Improve reply-toggle performance

- ZON-2826: Implement rawtext module for articles and CPs

- ZON-2874: Customize article citation blocks for campus


2.62 (2016-03-04)
-----------------

- ZON-2433: Improve sharing logic of cardstacks

- ZON-2839: Add ZEIT Campus article pagination

- ZON-2523: Add campus framebuilder

- ZON-2782: Refactor ZMO article image macro to dedicated template

- ZON-2835: Move blocks from site macros to template files in core.
            Create ZEIT Campus article blocks

- BUG-361: Support dates with timezones in community-maintenance.xml

- BUG-348: Sanitize webtrekk content id
           (Sanitizing now keeps `-`, since some ressort use that)

- FIX: Refresh contents of advertisement-nextread folder, so we don't access
       content that was retracted while the nextread folder was cached

- FIX: Remove superfluous and misleading interfaces from content objects that
       have no content type (due to missing or broken meta files).

- MAINT: Ensure stable return type for nextreads and comment counts

- MAINT: Be more defensive about errors when talking to the community


2.61.2 (2016-03-02)
-------------------

- HOTFIX: Don't display error message to non-authenticated users


2.61.1 (2016-03-02)
-------------------

- HOTFIX: Return valid user info from session

