@@ -256,18 +256,15 @@ def test_comment_action_recommend_should_redirect_to_login(testserver):
 
 def test_comment_area_note_should_be_displayed_if_set(
         testbrowser, monkeypatch):
-    comment = {
-        'show': True,
+    form = {
         'show_comment_form': False,
-        'show_comments': True,
-        'no_comments': False,
         'note': 'No community login',
         'message': None,
         'user_blocked': False,
         'show_premoderation_warning': False
     }
     monkeypatch.setattr(
-        zeit.web.site.view.CommentForm, 'comment_area', comment)
+        zeit.web.site.view.CommentForm, 'comment_form', form)
     browser = testbrowser('/zeit-online/article/01/comment-form')
     assert browser.cssselect('.comment-section__note div')[0].text == (
         'No community login')
