@@ -18,6 +18,8 @@ Change log for zeit.web
 
 - ZON-2837: Add table of contents to ZEIT Campus articles
 
+- ZON-2925: Don't needlessly load comment thread in comment form ESI
+
 - FIX: Fix main navigation on author pages
 
 - FIX: Fix gallery buttons on mobile
